Fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
     color: white;
     font-size: min(1.8vw, 2vh);
     line-height: 1.2em;
+    overflow-x: hidden;
 }
 
 * {
